# git-diver

./: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/git_changes/: Cargo.toml
crates/git_changes/src/: commit.rs  lib.rs
crates/git_diver/: Cargo.toml
crates/git_diver/src/: filters.rs  main.rs
